Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -110,6 +110,11 @@
         "jXYx1DRXxsog",
         "2SovrMekxsrx",
         "8I05magqxsvh",
+        "0IyI2TgT1OEf",
+        "LTKckHu0U5FP",
+        "mSQdGSmzU5J8",
+        "14T3PZXwU5PO",
+        "6XU-HwBjU5UD",
         "lh6uv54_bdBm",
         "oqZ3i95jWOSr",
         "WzwUHBI4pjsC",
@@ -122,7 +127,7 @@
         "VOaWDLwIWXJf",
         "HNMURhhYKntw"
       ],
-      "authorship_tag": "ABX9TyPbhH/Tphpxrt/0QqxR1WTF",
+      "authorship_tag": "ABX9TyNBZlNYHaOVlQpOC8AlcrmX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5543,13 +5548,73 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Nnpwyf_0U5Yx"
+        "id": "Nnpwyf_0U5Yx",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c11dbfe7-4dc3-4619-c83a-b891865dd45d"
       },
       "source": [
-        ""
+        "n, m = map(int, input().split())\n",
+        "l = list(map(int, input().split()))\n",
+        "\n",
+        "index = [0]*1000 + [i for i in range(1, n+1)] + [0]*1000\n",
+        "\n",
+        "start = 1000\n",
+        "end = 999 + n\n",
+        "\n",
+        "cnt = 0 # 2, 3번 수행 횟수\n",
+        "x = 0 # 입력받은 list의 갯수\n",
+        "t = -1 # 찾고자하는 위치의 인덱스\n",
+        "while True:\n",
+        "    #print('index : ',index[start:end+1], 't, start, end : ',t,start,end)\n",
+        "    if x == m: # 입력받은 list의 갯수와 1번 연산 실행 횟수가 같으면 멈춘다\n",
+        "        break\n",
+        "\n",
+        "    if t == -1: # 찾고자 하는 위치의 인덱스가 없다면\n",
+        "        for i in range(start, end+1): \n",
+        "            if index[i] == l[x]: # 찾고자 하는 위치를 찾는다\n",
+        "                t = i\n",
+        "                break\n",
+        "\n",
+        "    if t == start: # 찾고자하는 위치가 시작과 같으면\n",
+        "        index[start] = 0 # 시작 지점 0 입력\n",
+        "        start += 1 # 시작 위치 뒤로 땡기기\n",
+        "        x += 1 # 1번 실행 연산 횟수 +1\n",
+        "        t = -1 # 찾고자 하는 위치 reset\n",
+        "        continue\n",
+        "    \n",
+        "    if (end + start) / 2 >= t: # 찾고자하는 위치가 2번 연산을 할 때 빠른 경우\n",
+        "        end += 1 # 끝 지점 뒤로 한칸 땡기기\n",
+        "        index[end] = index[start] # 맨 앞의 요소 맨 뒤로 옮기기\n",
+        "        index[start] = 0 # 맨 앞요소 빈칸으로 만들기\n",
+        "        start += 1 # 시작 지점도 뒤로 땡기기\n",
+        "        cnt += 1 # 연산 횟수 카운팅\n",
+        "\n",
+        "    else: # 찾고자 하는 위치가 3번 연산을 할 때 빠른 경우\n",
+        "        start -= 1\n",
+        "        index[start] = index[end]\n",
+        "        index[end] = 0\n",
+        "        end -= 1\n",
+        "        cnt += 1\n",
+        "\n",
+        "        if t > end: # 3번 연산 중 찾고자 하는 위치가 deque에서 벗어나면\n",
+        "            t = start # 찾고자 하는 위치는 맨 앞으로 갔다.\n",
+        "\n",
+        "print(cnt)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10 10\n",
+            "1 6 3 2 7 9 8 4 10 5\n",
+            "14\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -5557,7 +5622,7 @@
         "id": "Rm5U7yLyU5dm"
       },
       "source": [
-        "#### "
+        "####  5430번"
       ]
     },
     {
@@ -5566,7 +5631,64 @@
         "id": "oxBrcFiAU5dn"
       },
       "source": [
-        ""
+        "def D(list_x): # 앞의 원소를 제거 하는 함수\n",
+        "    global start\n",
+        "    global end\n",
+        "\n",
+        "    if t == 1:  # 순방향\n",
+        "        start += 1\n",
+        "        return\n",
+        "    else:\n",
+        "        end -= 1\n",
+        "        return\n",
+        "\n",
+        "\n",
+        "for _ in range(int(input())):\n",
+        "    p = input()\n",
+        "    n = int(input())\n",
+        "\n",
+        "    if n < 2: # 원소의 갯수가 1개 이하면\n",
+        "        l = list(map(int, input().strip('[]'))) # 콤마가 없으므로\n",
+        "    else:\n",
+        "        l = list(map(int, input().strip('[]').split(',')))\n",
+        "\n",
+        "    start = 0\n",
+        "    end = n\n",
+        "\n",
+        "    try:\n",
+        "        t = 1  # 순 방향\n",
+        "\n",
+        "        for i in range(len(p)):\n",
+        "            if p[i] == 'R': # 방향을 정해주는 함수\n",
+        "                t += 1\n",
+        "                t %= 2\n",
+        "            else:\n",
+        "                D(l) # D 함수 실행\n",
+        "\n",
+        "        if start > end: # 시작지점이 끝 지점보다 크면\n",
+        "            print('error') # 에러 출력\n",
+        "            continue\n",
+        "\n",
+        "        if t == 1: # 순방향인 경우\n",
+        "            l += [0]\n",
+        "            l = l[start:end] # l의 시작지점 부터 끝 지점까지의 deque 반영\n",
+        "        else:\n",
+        "            if start > 0: \n",
+        "                l = l[end-1:start-1:-1] # 끝 지점부터 시작 지점까지 거꾸로 리스트 생성\n",
+        "            else: # 시작 지점이 0인경우\n",
+        "                l = l[end-1::-1] # 끝 지점부터 거꾸로 리스트 생성\n",
+        "\n",
+        "        print('[', end='')\n",
+        "        for i in range(len(l)): # 출력물에 띄어쓰기가 없으므로 \n",
+        "            if i == len(l) - 1:\n",
+        "                print(l[i], end='')\n",
+        "            else:\n",
+        "                print(l[i], end=',')\n",
+        "\n",
+        "        print(']')\n",
+        "\n",
+        "    except:\n",
+        "        print('error') # 인덱스 에러가 나는 경우 error 출력"
       ],
       "execution_count": null,
       "outputs": []
