Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -110,12 +110,12 @@
         "jXYx1DRXxsog",
         "2SovrMekxsrx",
         "8I05magqxsvh",
+        "71RWUsr01OEe",
         "0IyI2TgT1OEf",
         "LTKckHu0U5FP",
         "mSQdGSmzU5J8",
         "14T3PZXwU5PO",
         "6XU-HwBjU5UD",
-        "lh6uv54_bdBm",
         "oqZ3i95jWOSr",
         "WzwUHBI4pjsC",
         "n-jLje1Epjv5",
@@ -127,7 +127,7 @@
         "VOaWDLwIWXJf",
         "HNMURhhYKntw"
       ],
-      "authorship_tag": "ABX9TyNBZlNYHaOVlQpOC8AlcrmX",
+      "authorship_tag": "ABX9TyPwH6riGJ4r37wTN8kUNpUO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5603,7 +5603,7 @@
         "\n",
         "print(cnt)"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5699,7 +5699,7 @@
         "id": "lh6uv54_bdBm"
       },
       "source": [
-        "### **단계 : ===========**"
+        "### 20단계 : 분할정복===========**"
       ]
     },
     {
@@ -5708,13 +5708,274 @@
         "id": "F4l7j-IMbdBn"
       },
       "source": [
-        "#### "
+        "####  2630번"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "eBxSLPoxbdBn"
+      },
+      "source": [
+        "n = int(input())\n",
+        "l = []\n",
+        "for _ in range(n):\n",
+        "    l.append(list(map(int, input().split())))\n",
+        "\n",
+        "b = 0\n",
+        "w = 0\n",
+        "\n",
+        "\n",
+        "def f(list_x, n_x):\n",
+        "    global b\n",
+        "    global w\n",
+        "    #print(list_x)\n",
+        "\n",
+        "    if n_x == 1:\n",
+        "        if list_x[0][0] == 1:\n",
+        "            b += 1\n",
+        "            return\n",
+        "\n",
+        "        else:\n",
+        "            w += 1\n",
+        "            return\n",
+        "\n",
+        "    if [[0 for _ in range(n_x)] for _ in range(n_x)] == list_x:\n",
+        "        w += 1\n",
+        "        return\n",
+        "\n",
+        "    if [[1 for _ in range(n_x)] for _ in range(n_x)] == list_x:\n",
+        "        b += 1\n",
+        "        return\n",
+        "\n",
+        "    f([list_x[i][:int(n_x/2)] for i in range(int(n_x/2))], int(n_x/2))\n",
+        "    f([list_x[i][int(n_x/2):] for i in range(int(n_x/2))], int(n_x/2))\n",
+        "    f([list_x[i][:int(n_x/2)] for i in range(int(n_x/2), n_x)], int(n_x/2))\n",
+        "    f([list_x[i][int(n_x/2):] for i in range(int(n_x/2), n_x)], int(n_x/2))\n",
+        "\n",
+        "f(l, n)\n",
+        "print(w, b)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "qzTRR-kForE2"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2wUYRr0yorE2",
+        "outputId": "9cac9963-f5c4-4de8-ad88-b1387356f9d0"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[[1, 1, 0, 0, 0, 0, 1, 1], [1, 1, 0, 0, 0, 0, 1, 1]]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "tWj1_3nHorH0"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "dby4EhRVorH0"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "VvMq1AL7orKj"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rYm2R68IorKj"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "1Mqy6YQHorNT"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "HlDovTRiorNT"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "C8-hqFACoskw"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "opgIhD6woskx"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "bSoeQuPDosn7"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KLIeBOtEosn7"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "35U4FrTeosqy"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "hsC5yYEposqz"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "_FOjrbqBosth"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Iw42zEAjosth"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "cNZto4c8osxQ"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "eC4Ls3rJosxR"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "rKOdiegqolxT"
+      },
+      "source": [
+        "### **단계 : ===========**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "tX4YIkhZolxU"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "osUZN7KColxU"
       },
       "source": [
         ""
