Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -116,6 +116,7 @@
         "mSQdGSmzU5J8",
         "14T3PZXwU5PO",
         "6XU-HwBjU5UD",
+        "F4l7j-IMbdBn",
         "oqZ3i95jWOSr",
         "WzwUHBI4pjsC",
         "n-jLje1Epjv5",
@@ -127,7 +128,7 @@
         "VOaWDLwIWXJf",
         "HNMURhhYKntw"
       ],
-      "authorship_tag": "ABX9TyPwH6riGJ4r37wTN8kUNpUO",
+      "authorship_tag": "ABX9TyPaSfawu7Fx2Yp2y+8YGwDO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5718,42 +5719,44 @@
       },
       "source": [
         "n = int(input())\n",
-        "l = []\n",
+        "l = [] # 입력값을 받을 리스트 정의\n",
         "for _ in range(n):\n",
         "    l.append(list(map(int, input().split())))\n",
         "\n",
-        "b = 0\n",
-        "w = 0\n",
+        "b = 0 # 1인 칸 카운트\n",
+        "w = 0 # 0인 칸 카운트\n",
         "\n",
         "\n",
-        "def f(list_x, n_x):\n",
-        "    global b\n",
+        "def f(list_x, n_x): # 재귀함수를 사용한 분할 정복\n",
+        "    global b # 글로벌 변수 설정\n",
         "    global w\n",
         "    #print(list_x)\n",
         "\n",
-        "    if n_x == 1:\n",
-        "        if list_x[0][0] == 1:\n",
-        "            b += 1\n",
+        "    if n_x == 1: # 받는 리스트가 1 x 1 인경우\n",
+        "        if list_x[0][0] == 1: # 안의 내용이 1인 경우\n",
+        "            b += 1 # b 변수 + 1\n",
         "            return\n",
         "\n",
         "        else:\n",
         "            w += 1\n",
         "            return\n",
         "\n",
-        "    if [[0 for _ in range(n_x)] for _ in range(n_x)] == list_x:\n",
-        "        w += 1\n",
+        "    if [[0 for _ in range(n_x)] for _ in range(n_x)] == list_x: \n",
+        "        # (n_x) x (n_x) 크기의 리스트가 같은 크기의 0 행렬인 경우\n",
+        "        w += 1 # w 변수 1로 묶고 종료\n",
         "        return\n",
         "\n",
         "    if [[1 for _ in range(n_x)] for _ in range(n_x)] == list_x:\n",
+        "        # (n_x) x (n_x) 크기의 리스트가 같은 크기의 1 행렬인 경우\n",
         "        b += 1\n",
         "        return\n",
         "\n",
-        "    f([list_x[i][:int(n_x/2)] for i in range(int(n_x/2))], int(n_x/2))\n",
-        "    f([list_x[i][int(n_x/2):] for i in range(int(n_x/2))], int(n_x/2))\n",
-        "    f([list_x[i][:int(n_x/2)] for i in range(int(n_x/2), n_x)], int(n_x/2))\n",
-        "    f([list_x[i][int(n_x/2):] for i in range(int(n_x/2), n_x)], int(n_x/2))\n",
+        "    f([list_x[i][:int(n_x/2)] for i in range(int(n_x/2))], int(n_x/2)) # 2사분면 재귀\n",
+        "    f([list_x[i][int(n_x/2):] for i in range(int(n_x/2))], int(n_x/2)) # 1 사분면 재귀\n",
+        "    f([list_x[i][:int(n_x/2)] for i in range(int(n_x/2), n_x)], int(n_x/2)) # 3사분면 재귀\n",
+        "    f([list_x[i][int(n_x/2):] for i in range(int(n_x/2), n_x)], int(n_x/2)) # 4사분면 재귀\n",
         "\n",
-        "f(l, n)\n",
+        "f(l, n) # 재귀함수 실행\n",
         "print(w, b)"
       ],
       "execution_count": null,
@@ -5765,34 +5768,57 @@
         "id": "qzTRR-kForE2"
       },
       "source": [
-        "#### "
+        "####  1992번"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "2wUYRr0yorE2",
-        "outputId": "9cac9963-f5c4-4de8-ad88-b1387356f9d0"
+        "id": "2wUYRr0yorE2"
       },
       "source": [
-        ""
+        "n = int(input())\n",
+        "l = []\n",
+        "for _ in range(n): # 입력 받는 값에 빈칸을 삽입한 후 split 진행\n",
+        "    l.append(list(map(int, ' '.join(input()).split())))\n",
+        "\n",
+        "res = [] # 결과값을 담을 리스트 정의\n",
+        "\n",
+        "def f(list_x, n_x): # 재귀함수를 사용한 분할정복\n",
+        "    global res\n",
+        "\n",
+        "    if n_x == 1: # 들어오는 리스트의 크기가 1 x 1인 경우\n",
+        "        if list_x[0][0] == 1: # 리스트의 내용이 1인경우\n",
+        "            res.append(1) # 결과 값에 1 입력\n",
+        "            return\n",
+        "\n",
+        "        else:\n",
+        "            res.append(0)\n",
+        "            return\n",
+        "\n",
+        "    if [[0 for _ in range(n_x)] for _ in range(n_x)] == list_x:\n",
+        "        # (n_x) x (n_x) 크기의 리스트가 같은 크기의 0 행렬인 경우\n",
+        "        res.append(0)\n",
+        "        return\n",
+        "\n",
+        "    if [[1 for _ in range(n_x)] for _ in range(n_x)] == list_x:\n",
+        "        # (n_x) x (n_x) 크기의 리스트가 같은 크기의 1 행렬인 경우\n",
+        "        res.append(1)\n",
+        "        return\n",
+        "    res.append('(') # 4사분면으로 나누기 이전 괄호를 이용하여 묶기\n",
+        "    f([list_x[i][:int(n_x/2)] for i in range(int(n_x/2))], int(n_x/2)) # 2사분면\n",
+        "    f([list_x[i][int(n_x/2):] for i in range(int(n_x/2))], int(n_x/2)) # 1사분면\n",
+        "    f([list_x[i][:int(n_x/2)] for i in range(int(n_x/2), n_x)], int(n_x/2)) # 3사분면\n",
+        "    f([list_x[i][int(n_x/2):] for i in range(int(n_x/2), n_x)], int(n_x/2)) # 4사분면\n",
+        "    res.append(')') # 닫는 괄호 사용\n",
+        "\n",
+        "\n",
+        "f(l, n) # 재귀함수 실행\n",
+        "for i in res: # 띄어쓰기 없이 결과값 출력\n",
+        "    print(i, end='')"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[[1, 1, 0, 0, 0, 0, 1, 1], [1, 1, 0, 0, 0, 0, 1, 1]]"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 12
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -5800,7 +5826,7 @@
         "id": "tWj1_3nHorH0"
       },
       "source": [
-        "#### "
+        "####  1780번"
       ]
     },
     {
@@ -5809,7 +5835,70 @@
         "id": "dby4EhRVorH0"
       },
       "source": [
-        ""
+        "import sys\n",
+        "n = int(input())\n",
+        "l = []\n",
+        "for _ in range(n):  # 입력 받는 값에 빈칸을 삽입한 후 split 진행\n",
+        "    l.append(list(map(int, sys.stdin.readline().rstrip('\\n').split())))\n",
+        "\n",
+        "minus = 0\n",
+        "zero = 0\n",
+        "plus = 0\n",
+        "\n",
+        "def f(list_x, n_x):  # 재귀함수를 사용한 분할정복\n",
+        "    global minus\n",
+        "    global zero\n",
+        "    global plus\n",
+        "\n",
+        "    if n_x == 1:  # 들어오는 리스트의 크기가 1 x 1인 경우\n",
+        "        if list_x[0][0] == -1:  # 리스트의 내용이 1인경우\n",
+        "            minus += 1\n",
+        "            return\n",
+        "        elif list_x[0][0] == 0:\n",
+        "            zero += 1\n",
+        "            return\n",
+        "        else:\n",
+        "            plus += 1\n",
+        "            return\n",
+        "\n",
+        "    s = [] \n",
+        "    for i in list_x: # 2차원 리스트 1차원 리스트로 변환\n",
+        "        s += i\n",
+        "\n",
+        "    s = list(set(s)) # 중복 값 제거\n",
+        "    if len(s) == 1: # 값이 하나면\n",
+        "        if s[0] == -1: # -1 값이면\n",
+        "            minus += 1 # minus +1\n",
+        "            return\n",
+        "        elif s[0] == 0:\n",
+        "            zero += 1\n",
+        "            return\n",
+        "        else:\n",
+        "            plus += 1\n",
+        "            return\n",
+        "\n",
+        "    y = int(n_x/3)\n",
+        "    t = [i for i in range(0, n_x, y)]\n",
+        "\n",
+        "    # 9분할 진행\n",
+        "    f([list_x[i][t[0]:t[0]+y] for i in range(t[1])], y) \n",
+        "    f([list_x[i][t[1]:t[1]+y] for i in range(t[1])], y) \n",
+        "    f([list_x[i][t[2]:] for i in range(t[1])], y)\n",
+        "\n",
+        "    f([list_x[i][t[0]:t[0]+y] for i in range(t[1], t[2])], y)\n",
+        "    f([list_x[i][t[1]:t[1]+y] for i in range(t[1], t[2])], y)\n",
+        "    f([list_x[i][t[2]:] for i in range(t[1], t[2])], y)\n",
+        "\n",
+        "    f([list_x[i][t[0]:t[0]+y] for i in range(t[2], n_x)], y)\n",
+        "    f([list_x[i][t[1]:t[1]+y] for i in range(t[2], n_x)], y)\n",
+        "    f([list_x[i][t[2]:] for i in range(t[2], n_x)], y)\n",
+        "\n",
+        "\n",
+        "f(l, n)  # 재귀함수 실행\n",
+        "\n",
+        "print(minus)\n",
+        "print(zero)\n",
+        "print(plus)"
       ],
       "execution_count": null,
       "outputs": []
