Colaboratory를 통해 생성됨

--- a/문제해결프로그래밍.ipynb
+++ b/문제해결프로그래밍.ipynb
@@ -14,9 +14,10 @@
         "gPIJXHar3XrB",
         "T5wbiAyw3Xt4",
         "63PbcOYstRvs",
-        "rOjcJJoYtXZd"
+        "rOjcJJoYtXZd",
+        "wDGrdIDhtWp1"
       ],
-      "authorship_tag": "ABX9TyN2fucTMdBBNAc5DlRmiSek",
+      "authorship_tag": "ABX9TyMIGJdVKTzouqiObiacQZin",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2534,7 +2535,7 @@
         "id": "9dIx1RZ7tXBt"
       },
       "source": [
-        "# 9주차"
+        "# 12주차"
       ]
     },
     {
@@ -2543,7 +2544,98 @@
         "id": "GkbFJG-ktXBu"
       },
       "source": [
-        ""
+        "### w12/p1 주근깨 (Freckles)\n",
+        "# https://sexy-developer.tistory.com/58 <- prim's 알고리즘 상세한 설명\n",
+        "# 모든 주근깨가 연결되어있다고 생각하고\n",
+        "# 그 중 최단거리를 찾는다.\n",
+        "\n",
+        "# 전역 변수 선언\n",
+        "n = 0       # 주근깨(노드) 개수\n",
+        "visit = []  # 방문한 노드인지\n",
+        "dist = []   # 최소 거리\n",
+        "\n",
+        "'''\n",
+        "graph\n",
+        "  0 1.4 2.4\n",
+        "1.4   0   2 \n",
+        "2.4   2   0\n",
+        "\n",
+        "visit\n",
+        "[False, False, False]\n",
+        "\n",
+        "dist\n",
+        "[0, inf, inf]\n",
+        "'''\n",
+        "\n",
+        "\n",
+        "# 연결된 노드에서 가장 적은 잉크를 가지고 갈 수 있는 노드를 찾는다.\n",
+        "def get_min():\n",
+        "\tglobal n, visit, dist \n",
+        "\t\t\n",
+        "\tfor i in range(n):      # 노드의 개수만큼 반복\n",
+        "\t\t# 방문하지 않은 노드를 하나 찾는다.\n",
+        "\t\tif visit[i] == False: # 코드 입력\n",
+        "\t\t\tt = i\n",
+        "\t\t\tbreak\n",
+        "\t\n",
+        "\t# 방문하지 않은 노드들 중 가장 적은 거리를 가지는 노드를 찾는다.\n",
+        "\tfor i in range(n):\n",
+        "\t\tif visit[i] == False and dist[i] < dist[t]:\n",
+        "\t\t\tt = i\n",
+        "\t\t\t\n",
+        "\t\t'''\n",
+        "\t\t코드 입력\n",
+        "\t\t'''\n",
+        "\treturn t\n",
+        "\n",
+        "# 최소한의 거리(잉크)를 찾는다.\n",
+        "def find(graph):\n",
+        "\tglobal n, visit, dist\n",
+        "\tvisit = [False for _ in range(n)]       # 방문한 노드인지 아닌지 확인하는 배열 \n",
+        "\tdist = [float('inf') for _ in range(n)] # 거리(잉크), infinity로 초기화해준다.\n",
+        "\tdist[0] = 0     # 0번째 주근깨에서부터 시작\n",
+        "\t# 노드 개수만큼 반복\n",
+        "\tfor i in range(n):\n",
+        "\t\t# 현재 연결된 노드에서 갈 수 있는 가장 가까운 노드를 찾는다.\n",
+        "\t\tnode = get_min()\n",
+        "\n",
+        "\t\t\n",
+        "\t\tvisit[node] = True # [True, False, False]\n",
+        "\n",
+        "\t\t# 노드 개수만큼 반복 \n",
+        "\t\tfor j in range(n):\n",
+        "\t\t\t# 만약 지금 노드가 방문하지 않은 노드이고 현재 거리보다 짧은 거리라면\n",
+        "\t\t\t# 현재 거리를 더 짧은 거리로 업데이트 해준다.\n",
+        "\t\t\tif visit[j] == False and graph[node][j] < dist[j]:\n",
+        "\t\t\t\tdist[j] = graph[node][j] # 코드 입력\n",
+        "\t\t\t\t\n",
+        "\t\t\t\t\n",
+        "\n",
+        "T = int(input())    # 테스트 케이스 개수\n",
+        "# 테스트 케이스 개수만큼 반복한다.\n",
+        "for _ in range(T):\n",
+        "\t_ = input()     # 빈 줄 입력\n",
+        "\tn = int(input())    # 주근깨 개수\n",
+        "\tfreckles = {}   # 어느 위치에 있는 주근깨가 몇 번인지\n",
+        "\tgraph = [[0 for _ in range(n)] for _ in range(n)] # nxn 크기의 그래프\n",
+        "\t# 주근깨 좌표를 입력받는다.\n",
+        "\tfor i in range(n):\n",
+        "\t\tx, y = map(float, input().split())\n",
+        "\t\tfreckles[i] = (x, y)\n",
+        "\t\t# 지금까지 입력된 주근깨 사이의 거리를 계산한다.\n",
+        "\t\tfor j in range(i):\n",
+        "\t\t\tif i == j:\n",
+        "\t\t\t\tcontinue\n",
+        "\t\t\telse:\n",
+        "\t\t\t\t# 두 주근깨 사이에 거리를 계산해서 소수점 둘째 자리까지\n",
+        "\t\t\t\td = ((freckles[i][0]-freckles[j][0])**2+(freckles[i][1]-freckles[j][1])**2)**0.5\n",
+        "\t\t\t\tgraph[i][j] = d\n",
+        "\t\t\t\tgraph[j][i] = d\n",
+        "\t\n",
+        "\tfind(graph)\n",
+        "\t# 소숫점 둘째자리까지 출력\n",
+        "\tprint(\"{:.2f}\".format(sum(dist)))\n",
+        "\tprint()"
       ],
       "execution_count": null,
       "outputs": []
@@ -2554,7 +2646,223 @@
         "id": "VECuIC1btXBu"
       },
       "source": [
-        ""
+        "### w12/p2 소방서(fire station)\n",
+        "# 최단경로 알고리즘을 이용해서 현재 있는 소방서로부터 최단 경로가 가장 긴 곳이 가장 짧은 곳에 소방서 설치\n",
+        "import numpy as np\n",
+        "\n",
+        "cross = []\n",
+        "visit = []\n",
+        "dist = []\n",
+        "\n",
+        "# 방문하지 않은 노드 중 시작 노드와 최단거리를 가지는 노드 반환\n",
+        "def get_min():\n",
+        "\tmin_len = float('inf')\n",
+        "\tindex = 0\n",
+        "\tn = len(cross)\n",
+        "\tfor i in range(1, n):\n",
+        "\t\t# 방문하지 않은 교차로 중에서 현재에서 갈 수 있는 가장 적은 거리를 가지는 교차로를 찾는다.\n",
+        "\t\t#''' 코드 작성\n",
+        "\t\tif visit[i] == False and dist[i] <= min_len: # dist = [inf, 10, 0, 10, inf, inf]\n",
+        "\t\t\tmin_len = dist[i]\n",
+        "\t\t\tindex = i\n",
+        "\t\t#'''\n",
+        "\treturn index\n",
+        "\n",
+        "# start 교차로에서 모든 교차로까지 최단 거리를 찾는다.\n",
+        "def find(start):\n",
+        "\tglobal visit, cross, dist\n",
+        "\tvisit = [False for _ in range(i + 1)]       # 모두 방문하지 않았다\n",
+        "\tdist = [float('inf') for _ in range(i + 1)] # 최단거리는 일단 무한대\n",
+        "\tvisit[start] = True     # 시작 교차로 방문 체크\n",
+        "\tdist = cross[start].copy()  # 시작 교차로에서 갈 수 있는 교차로들의 거리를 가져온다.\n",
+        "\tdist[start] = 0         # 시작 교차로에서 시작 교차로까지는 거리가 0 \n",
+        "\t#print('dist : ',dist)\n",
+        "\t\n",
+        "\t# 시작 교차로, 0번 교차로를 제외한 만큼 for문을 실행한다.\n",
+        "\tfor _ in range(len(cross)-2):\n",
+        "\t\tnode = get_min()    # 가장 짧은 교차로를 받아온다.\n",
+        "\t\tvisit[node] = True  # 방문 체크\n",
+        "\t\t#print(node)\n",
+        "\t\t# node 교차로에서 갈 수 있는 교차로들 까지의 거리를 계산한다.\n",
+        "\t\tfor j in range(len(cross[node])):\n",
+        "\t\t\t# 현재 저장된 거리보다 더 짧은 거리가 있다면 저장\n",
+        "\t\t\t#''' 코드 작성\n",
+        "\t\t\tdist[node] = min(dist[j] + cross[j][node],  dist[node])\n",
+        "\t\t\tdist[j] = min(dist[node] + cross[node][j],  dist[j])\n",
+        "\t\t\t#'''\n",
+        "\t\t\t\n",
+        "\t# 0번 교차로를 빼고 나머지들을 반환한다.\n",
+        "\t#''' 코드 작성\n",
+        "\treturn dist[1:]\n",
+        "\t#'''\n",
+        "\n",
+        "T = int(input()) # 테스트 케이스 개수\n",
+        "# 테스트 케이스 개수만큼 반복\n",
+        "for _ in range(T):\n",
+        "\t_ = input()\n",
+        "\t# 소방서 수와 교차로 수 입력\n",
+        "\tf, i = map(int, input().split())\n",
+        "\t# 일단 교차로들간의 거리를 무한대로 초기화해준다.\n",
+        "\t# 교차로 수는 1번부터 시작이므로 i+1 크기의 배열로 만들어준다.\n",
+        "\tcross = [[float('inf') for _ in range(i+1)] for _ in range(i+1)] # 0~7\n",
+        "\tfirestation = []    # 소방서가 위치한 교차로 번호\n",
+        "\t# 소방서와 교차로 간 거리 입력\n",
+        "\tfor _ in range(f):\n",
+        "\t\tfirestation.append(int(input()))\n",
+        "\tfor _ in range(i):\n",
+        "\t\tc1, c2, d = map(int, input().split())\n",
+        "\t\tcross[c1][c2] = d\n",
+        "\t\tcross[c2][c1] = d\n",
+        "\t\n",
+        "\t#print('cross : ',cross)\n",
+        "\t# 설치된 소방서가 없다면 1번 교차로에 만든다.\n",
+        "\tif f == 0:\n",
+        "\t\tprint(1)\n",
+        "\t# 설치된 소방서가 있다면 거리 계산 시작\n",
+        "\telse:\n",
+        "\t\tdist_array = [] # 설치될 소방서로부터의 거리\n",
+        "\t\tfire_dist = []  # 설치된 소방서로부터의 거리 \n",
+        "\t\t\n",
+        "\t\t# 일단 지금 있는 소방서에서 각 교차로까지의 거리를 구한다.\n",
+        "\t\tfor fi in firestation:\n",
+        "\t\t\tfire_dist.append(find(fi))\n",
+        "\t\t#print('fire_dist : ',fire_dist)\n",
+        "\t\tfire_dist = np.min(fire_dist, axis=0)\n",
+        "\t\t#print('fire_dist : ',fire_dist) # [10 0 10 20 30 20]\n",
+        "\t\t\n",
+        "\t\t# 만약에 새로운 곳에 소방서를 놓는다면 새로 지어진 곳과의 거리\n",
+        "\t\tfor fi in range(1, i+1): # 1 ~ 6 i : 교차로의 수 6\n",
+        "\t\t\t#''' 코드 작성\n",
+        "\t\t\tt = [find(fi)]\n",
+        "\t\t\tt.append(list(fire_dist))\n",
+        "\t\t\t#print('t : ',t)\n",
+        "\t\t\tdist_array.append(list(np.min(t , axis=0)))\n",
+        "\t\t\t\n",
+        "\t\t\t#'''\n",
+        "\t\t#print('dist_array : ',dist_array)\n",
+        "\t\tmin_dist = []\n",
+        "\t\t\n",
+        "\t\t# 새로운 소방서가 지어진다면 교차로와 소방서들과의 가장 짧은 거리를 계산해서 넣어준다.\n",
+        "\t\tfor di in range(len(dist_array)):\n",
+        "\t\t\t#'''코드 작성\n",
+        "\t\t\tmin_dist.append(max(dist_array[di]))\n",
+        "\t\t\t#'''\n",
+        "\t\t#print(min_dist) # 0 10 10 20 10 10\n",
+        "\t\t# 가장 짧은 거리가 가장 긴 곳을 찾아준다.\n",
+        "\t\t#'''코드 작성\n",
+        "\t\tfor i in range(len(min_dist)):\n",
+        "\t\t\tif min_dist[i] == min(min_dist):\n",
+        "\t\t\t\tx = i\n",
+        "\t\t\t\tbreak\n",
+        "\t\t#'''\n",
+        "\t\t\n",
+        "\t\t#'''\n",
+        "\t\tprint(x+1)\n",
+        "\t\t#'''\n",
+        "\tprint()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8IAkg8lj3YHs"
+      },
+      "source": [
+        "### w12/p3 여행자 가이드(Tourist Guide)\n",
+        "# 모든 vertex를 방문 했나요?\n",
+        "def check_all(check):\n",
+        "\tfor i in check:\n",
+        "\t\tif i == False:\n",
+        "\t\t\treturn False\n",
+        "\treturn True\n",
+        "\n",
+        "def BFS(graph, start_vertex, delte_vertex):\n",
+        "\n",
+        "\t# 지우기 전에 그 vertex가 갈 수 있는 vertex들을 temp에 저장한다.\n",
+        "\ttemp = graph[delte_vertex]\n",
+        "\t# 해당 vertex를 지운다.\n",
+        "\tgraph[delte_vertex]=[]\n",
+        "\n",
+        "\t# check[n]이 False라면 n번 vertex에는 방문하지 않은 것이다.\n",
+        "\tcheck = [False for _ in range(len(graph))]\n",
+        "\n",
+        "\tqueue = [start_vertex]\n",
+        "\tcheck[start_vertex]=True\n",
+        "\t# 지운 vertex는 도달하지 못할 수도 있기에 True로 바꿔준다.\n",
+        "\tcheck[delte_vertex]=True\n",
+        "\n",
+        "\twhile len(queue) > 0:\n",
+        "\t\t#'''\n",
+        "\t\tt = queue.pop()\n",
+        "\t\ts = graph[t]\n",
+        "\t\t\n",
+        "\t\tfor i in s:\n",
+        "\t\t\tif check[i] == False:\n",
+        "\t\t\t\tqueue.append(i)\n",
+        "\t\t\t\tcheck[i] = True\n",
+        "\t\t\t\n",
+        "\t\t#'''\n",
+        "\n",
+        "\t# 지운 vertex를 다시 붙여준다.\n",
+        "\tgraph[delte_vertex]=temp\n",
+        "\n",
+        "\treturn not check_all(check)\n",
+        "\n",
+        "try:\n",
+        "\ttestcase = 1\n",
+        "\twhile True:\n",
+        "\t\tvertex_num = int(input())\n",
+        "\n",
+        "\t\tif vertex_num == 0:\n",
+        "\t\t\texit()\n",
+        "\n",
+        "\t\tvertex_list = []\n",
+        "\n",
+        "\t\tfor i in range(vertex_num):\n",
+        "\t\t\tvertex_name = input()\n",
+        "\t\t\tvertex_list.append(vertex_name)\n",
+        "\n",
+        "\t\tgraph = [[] for i in range(vertex_num)]\n",
+        "\n",
+        "\t\tedge_num = int(input())\n",
+        "\t\tfor _ in range(edge_num):\n",
+        "\t\t\tv1, v2 = input().split()\n",
+        "\t\t\tv1_index = vertex_list.index(v1)\n",
+        "\t\t\tv2_index = vertex_list.index(v2)\n",
+        "\n",
+        "\t\t\t# 양방향 그래프이기에 둘 다 append 해준다\n",
+        "\t\t\tgraph[v1_index].append(v2_index)\n",
+        "\t\t\tgraph[v2_index].append(v1_index)\n",
+        "\t\t\t\n",
+        "\t\t#print(graph)\n",
+        "\t\t# cctv가 있는 도시에 대해 넣을 list\n",
+        "\t\tcity_list = []\n",
+        "\n",
+        "\t\t# 어떤 vertex를 지웠을 때, 모든 vertex를 갈 수 없다면(graph가 두개로 쪼개진다면) 지운 vertex에 cctv가 있다는 것을 의미한다.\n",
+        "\t\tfor i in range(vertex_num):\n",
+        "\n",
+        "\t\t\t# 0번을 지울 때에는 1로, 그 외에는 0에서 BFS를 진행한다.\n",
+        "\t\t\tif i == 0:\n",
+        "\t\t\t\tsplit = BFS(graph, 1, i)\n",
+        "\t\t\telse:\n",
+        "\t\t\t\tsplit = BFS(graph, 0, i)\n",
+        "\n",
+        "\t\t\tif split:\n",
+        "\t\t\t\tcity_list.append(vertex_list[i])\n",
+        "\n",
+        "\t\t# 출력\n",
+        "\t\tprint(f\"City map #{testcase}: {len(city_list)} camera(s) found\")\n",
+        "\t\tfor i in sorted(city_list):\n",
+        "\t\t\tprint(i)\n",
+        "\t\tprint()\n",
+        "\n",
+        "\t\ttestcase+=1\n",
+        "\n",
+        "\n",
+        "except EOFError:\n",
+        "\texit()"
       ],
       "execution_count": null,
       "outputs": []
