Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -128,7 +128,7 @@
         "VOaWDLwIWXJf",
         "HNMURhhYKntw"
       ],
-      "authorship_tag": "ABX9TyPaSfawu7Fx2Yp2y+8YGwDO",
+      "authorship_tag": "ABX9TyNIKUj6uNs4jQN48dm9/FCN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5799,7 +5799,7 @@
         "    if [[0 for _ in range(n_x)] for _ in range(n_x)] == list_x:\n",
         "        # (n_x) x (n_x) 크기의 리스트가 같은 크기의 0 행렬인 경우\n",
         "        res.append(0)\n",
-        "        return\n",
+        "        return \n",
         "\n",
         "    if [[1 for _ in range(n_x)] for _ in range(n_x)] == list_x:\n",
         "        # (n_x) x (n_x) 크기의 리스트가 같은 크기의 1 행렬인 경우\n",
@@ -5909,7 +5909,7 @@
         "id": "VvMq1AL7orKj"
       },
       "source": [
-        "#### "
+        "####  1629번"
       ]
     },
     {
@@ -5918,7 +5918,21 @@
         "id": "rYm2R68IorKj"
       },
       "source": [
-        ""
+        "a, b, c = map(int,input().split()) # 10, 11, 12\n",
+        "\n",
+        "def f(x,y): # x는 인수분해, y는 나누기 # 10 , 12\n",
+        "    global c\n",
+        "\n",
+        "    if y == 1:\n",
+        "        return x % c\n",
+        "    \n",
+        "    t = f(x,y//2)\n",
+        "    if y % 2 == 0:\n",
+        "        return t*t%c\n",
+        "    else:\n",
+        "        return t*t*x%c\n",
+        "\n",
+        "print(f(a,b))"
       ],
       "execution_count": null,
       "outputs": []
