Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -128,7 +128,7 @@
         "VOaWDLwIWXJf",
         "HNMURhhYKntw"
       ],
-      "authorship_tag": "ABX9TyNIKUj6uNs4jQN48dm9/FCN",
+      "authorship_tag": "ABX9TyNHgvo4XEfJy6xeGq2/kVKb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5963,7 +5963,7 @@
         "id": "C8-hqFACoskw"
       },
       "source": [
-        "#### "
+        "####  2740번"
       ]
     },
     {
@@ -5972,7 +5972,29 @@
         "id": "opgIhD6woskx"
       },
       "source": [
-        ""
+        "n, m = map(int, input().split())\n",
+        "A = []\n",
+        "for _ in range(n):\n",
+        "    A.append(list(map(int, input().split())))\n",
+        "\n",
+        "m, k = map(int, input().split())\n",
+        "B = []\n",
+        "for _ in range(m):\n",
+        "    B.append(list(map(int, input().split())))\n",
+        "\n",
+        "res = []\n",
+        "for i in range(n):\n",
+        "    t = []\n",
+        "    for j in range(k):\n",
+        "        x = 0\n",
+        "        for l in range(m):\n",
+        "            x += A[i][l] * B[l][j]\n",
+        "\n",
+        "        t.append(x)\n",
+        "    res.append(t)\n",
+        "\n",
+        "for i in res:\n",
+        "    print(*i)\n"
       ],
       "execution_count": null,
       "outputs": []
