Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -128,7 +128,7 @@
         "VOaWDLwIWXJf",
         "HNMURhhYKntw"
       ],
-      "authorship_tag": "ABX9TyNHgvo4XEfJy6xeGq2/kVKb",
+      "authorship_tag": "ABX9TyMiocMpiP0SQ1/tQHOdUFsa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5943,7 +5943,7 @@
         "id": "1Mqy6YQHorNT"
       },
       "source": [
-        "#### "
+        "####  (***)11401번"
       ]
     },
     {
@@ -5952,7 +5952,39 @@
         "id": "HlDovTRiorNT"
       },
       "source": [
-        ""
+        "#페르마의 소정리\n",
+        "# a**p % p = a % p, a ** (p-1) ≡ 1\n",
+        "# a**(p-1) ≡ a * (a ** (p-2)) ≡ 1 ( % p) => a의 역원이 a ** (p-2)\n",
+        "# 1 / (a % p) ≡ (a ** (p-2))\n",
+        "\n",
+        "#nCk ≡ n! / (k!(n-k)!), (mod p)\n",
+        "#    ≡ (n! % p) * (1 / (k! % p)) * (1 / ((n-k)! % p)))\n",
+        "#    ≡ (n! % p) * (k! % p)**(p-2) * ((n-k)! % p)**(p-2)\n",
+        "n, k = map(int, input().split()) \n",
+        "\n",
+        "p = 1000000007\n",
+        "\n",
+        "def f(x):\n",
+        "    if x == 0:\n",
+        "        return 1\n",
+        "    else:\n",
+        "        for i in range(x-1, 1, -1):\n",
+        "            x *= i\n",
+        "            x %= p\n",
+        "        return x % p\n",
+        "\n",
+        "def f_1(x,y): \n",
+        "    if y == 1:\n",
+        "        return x % p\n",
+        "    \n",
+        "    t = f_1(x,y//2)\n",
+        "\n",
+        "    if y % 2 == 0:\n",
+        "        return t*t%p\n",
+        "    else:\n",
+        "        return t*t*x%p\n",
+        "\n",
+        "print((f(n) * f_1(f(k), p-2) * f_1(f(n-k), p-2)) % p)"
       ],
       "execution_count": null,
       "outputs": []
